--- a/package.json
+++ b/package.json
@@ -1,71 +1,97 @@
 {
-	"homepage": "https://horizon-ui.com/horizon-ui-chakra-ts",
-	"name": "horizon-ui-chakra-typescript",
-	"version": "1.0.0",
-	"private": true,
-	"dependencies": {
-		"@chakra-ui/icons": "^1.1.5",
-		"@chakra-ui/react": "1.8.8",
-		"@chakra-ui/system": "^1.12.1",
-		"@chakra-ui/theme-tools": "^1.3.6",
-		"@emotion/cache": "^11.7.1",
-		"@emotion/react": "^11.4.1",
-		"@emotion/styled": "^11.3.0",
-		"@testing-library/jest-dom": "^5.14.1",
-		"@testing-library/react": "^11.2.7",
-		"@testing-library/user-event": "^12.8.3",
-		"@types/jest": "^25.2.3",
-		"@types/node": "^12.20.55",
-		"@types/react": "^18.0.15",
-		"@types/react-dom": "^18.0.6",
-		"apexcharts": "^3.35.2",
-		"framer-motion": "^4.1.17",
-		"react": "^17.0.2",
-		"react-apexcharts": "^1.4.0",
-		"react-calendar": "^3.7.0",
-		"react-custom-scrollbars-2": "^4.2.1",
-		"react-dom": "17.0.2",
-		"react-dropzone": "^12.0.4",
-		"react-icons": "^4.3.1",
-		"react-is": "^18.0.0",
-		"react-router-dom": "^5.3.0",
-		"react-scripts": "5.0.0",
-		"react-table": "^7.8.0",
-		"stylis": "^4.1.1",
-		"stylis-plugin-rtl": "2.0.2",
-		"typescript": "^4.7.4",
-		"web-vitals": "^1.1.2"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"@types/react-calendar": "^3.5.2",
-		"@types/react-router-dom": "^5.3.3",
-		"@types/react-table": "^7.7.12",
-		"gh-pages": "^3.2.3"
-	}
+  "homepage": "https://horizon-ui.com/horizon-ui-chakra-ts",
+  "name": "horizon-ui-chakra-typescript",
+  "version": "1.0.0",
+  "private": true,
+  "dependencies": {
+    "@chakra-ui/icons": "^1.1.5",
+    "@chakra-ui/react": "1.8.8",
+    "@chakra-ui/system": "^1.12.1",
+    "@chakra-ui/theme-tools": "^1.3.6",
+    "@emotion/cache": "^11.7.1",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^25.2.3",
+    "@types/node": "^12.20.55",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "apexcharts": "^3.35.2",
+    "framer-motion": "^4.1.17",
+    "react": "^17.0.2",
+    "react-apexcharts": "^1.4.0",
+    "react-calendar": "^3.7.0",
+    "react-custom-scrollbars-2": "^4.2.1",
+    "react-dom": "17.0.2",
+    "react-dropzone": "^12.0.4",
+    "react-icons": "^4.3.1",
+    "react-is": "^18.0.0",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "5.0.0",
+    "react-table": "^7.8.0",
+    "stylis": "^4.1.1",
+    "stylis-plugin-rtl": "2.0.2",
+    "typescript": "^4.7.4",
+    "web-vitals": "^1.1.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@chakra-ui/storybook-addon": "^4.0.10",
+    "@storybook/addon-actions": "^6.5.10",
+    "@storybook/addon-essentials": "^6.5.10",
+    "@storybook/addon-interactions": "^6.5.10",
+    "@storybook/addon-links": "^6.5.10",
+    "@storybook/builder-webpack5": "^6.5.10",
+    "@storybook/manager-webpack5": "^6.5.10",
+    "@storybook/node-logger": "^6.5.10",
+    "@storybook/preset-create-react-app": "^4.1.2",
+    "@storybook/react": "^6.5.10",
+    "@storybook/testing-library": "^0.0.13",
+    "@types/react-calendar": "^3.5.2",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-table": "^7.7.12",
+    "babel-plugin-named-exports-order": "^0.0.2",
+    "gh-pages": "^3.2.3",
+    "prop-types": "^15.8.1",
+    "webpack": "^5.74.0"
+  }
 }
